Fix Badge vertical alignment https://github.com/humhub/humhub-internal/issues/974#issuecomment-3659316854

--- a/static/scss/_badge.scss
+++ b/static/scss/_badge.scss
@@ -17,7 +17,7 @@
 
         font-family: Arial, sans-serif;
         text-transform: uppercase;
-        vertical-align: baseline;
+        vertical-align: bottom;
         white-space: nowrap;
         text-shadow: none;
         background-color: var(--hh-background3);
